# assignment_4

./: .gitignore  .pre-commit-config.yaml  CITATION  README.md  environment.yml  pyproject.toml  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  enhancement.md  question.md
paper/: assignment_4.tex  assignment_4_pres.tex  task_paper.py
src/assignment_4/: __init__.py  config.py  testiing_code.ipynb
src/assignment_4/analysis/: task_analysis.py
src/assignment_4/data_management/: __init__.py  clean_chs_nlsy_data.py  merge_chs_nlsy_data.py  task_data_management.py  task_merge_chs_nlsy_data.py  task_prepare_chs.py  task_prepare_nlsy_data.py  task_unzip.py
src/assignment_4/final/: __init__.py  plot.py  task_final.py
src/assignment_4/monte_carlo/: model.py  task_monte_carlo.py
tests/analysis/: test_model.py  test_predict.py
tests/data_management/: test_clean_data.py
