[metadata]
name = assignment_4
description = assignment_4
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/botanyse/assignment_4
author = Cansu Toraman
author_email = cansu.toraman@uni-bonn.de
license = Not open source
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: Not open source License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
project_urls =
    Changelog = https://github.com/botanyse/assignment_4
    Documentation = https://github.com/botanyse/assignment_4
    Github = https://github.com/botanyse/assignment_4
    Tracker = https://github.com/botanyse/assignment_4/issues

[options]
packages = find:
install_requires =
    pytask
python_requires = >=3.11
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[check-manifest]
ignore =
    src/assignment_4/_version.py
